--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ requires-python = ">=3.11"
 dependencies = [
     "plotly>=5.24.1",
     "psycopg2-binary>=2.9.10",
+    "pywebpush>=2.0.1",
     "streamlit>=1.39.0",
 ]
