--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -8,3 +8,7 @@ primaryColor = "#FF4B4B"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
+font = "sans serif"
+
+[client]
+toolbarMode = "minimal"
