--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ cssutils>=2.7.1
 jsbeautifier>=1.14.9
 pytz>=2023.3
 python-dateutil>=2.8.2
+pandas
+plotly
+psycopg2-binary
+streamlit
+python-dateutil
+pytz
