--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit>=1.39.0
-psycopg2-binary>=2.9.10
+streamlit>=1.24.0
+psycopg2-binary>=2.9.6
+psutil>=5.9.0
+requests>=2.31.0
+python-dotenv>=1.0.0
 plotly>=5.24.1
 pywebpush>=2.0.1
 websockets>=12.0
@@ -8,9 +11,4 @@ cssutils>=2.7.1
 jsbeautifier>=1.14.9
 pytz>=2023.3
 python-dateutil>=2.8.2
-pandas
-plotly
-psycopg2-binary
-streamlit
-python-dateutil
-pytz
+pandas>=2.0.0
